# Demo-MCP-Server

./: .gitignore  README.md
Fred-mcp/: .dockerignore  .gitignore  COPILOT_STUDIO_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  azure.yaml  pyproject.toml
Fred-mcp/infra/: main.bicep  main.parameters.json  resources.bicep
Fred-mcp/src/fred_mcp/: __init__.py  __main__.py  http_server.py  server.py  tools.py
News-api-mcp/: COPILOT_STUDIO_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  azure.yaml  pyproject.toml
News-api-mcp/infra/: main.bicep  main.parameters.json  resources.bicep
News-api-mcp/src/news_api_mcp/: http_server.py  server.py  tools.py
ThinQ-mcp-server/: .env.example  COPILOT_STUDIO_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  azure.yaml  package.json
ThinQ-mcp-server/infra/: main.bicep  main.parameters.json  resources.bicep
